--- a/examples/example-expo/app.json
+++ b/examples/example-expo/app.json
@@ -1,36 +1,31 @@
 {
-  "expo": {
-    "name": "Date Picker Example",
-    "slug": "date-picker-example",
-    "version": "1.0.0",
-    "icon": "./assets/icon.png",
-    "newArchEnabled": true,
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.nuumi.datepickerexample"
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "edgeToEdgeEnabled": true,
-      "package": "com.nuumi.datepickerexample"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "plugins": [
-      "expo-asset",
-      "expo-font"
-    ]
-  }
+    "expo": {
+        "name": "Date Spinner Example",
+        "slug": "date-spinner-example",
+        "version": "1.0.0",
+        "icon": "./assets/icon.png",
+        "newArchEnabled": true,
+        "splash": {
+            "image": "./assets/splash.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "assetBundlePatterns": ["**/*"],
+        "ios": {
+            "supportsTablet": true,
+            "bundleIdentifier": "com.nuumi.datepickerexample"
+        },
+        "android": {
+            "adaptiveIcon": {
+                "foregroundImage": "./assets/adaptive-icon.png",
+                "backgroundColor": "#ffffff"
+            },
+            "edgeToEdgeEnabled": true,
+            "package": "com.nuumi.datepickerexample"
+        },
+        "web": {
+            "favicon": "./assets/favicon.png"
+        },
+        "plugins": ["expo-asset", "expo-font"]
+    }
 }
